--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -25,4 +25,4 @@ jobs:
       run: doctl registry login --expiry-seconds 600
 
     - name: Upload image to registry
-      run: docker push registry.digitalocean.com/poogie/poogie-api$GITHUB_RUN_NUMBER
+      run: docker push registry.digitalocean.com/poogie/poogie-api:$GITHUB_RUN_NUMBER
